HW3/gen/mainParser.py
# Generated from C:/Users/black/compiler_design_fall_2023/HW4/HW3/main.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class mainParser ( Parser ):

    grammarFileName = "main.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [  ]

    symbolicNames = [ "<INVALID>", "EMAIL", "NATIONAL_NUMBER", "POSTAL_CODE", 
                      "DECIMAL_NUMBER", "SOFTWARE_VERSION", "WEBSITE_ADDRESS", 
                      "DIGIT", "WS" ]

    RULE_start = 0
    RULE_nationalNumber = 1
    RULE_email = 2
    RULE_postalCode = 3
    RULE_decimalNumber = 4
    RULE_softwareVersion = 5
    RULE_websiteAddress = 6

    ruleNames =  [ "start", "nationalNumber", "email", "postalCode", "decimalNumber", 
                   "softwareVersion", "websiteAddress" ]

    EOF = Token.EOF
    EMAIL=1
    NATIONAL_NUMBER=2
    POSTAL_CODE=3
    DECIMAL_NUMBER=4
    SOFTWARE_VERSION=5
    WEBSITE_ADDRESS=6
    DIGIT=7
    WS=8

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class StartContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def nationalNumber(self):
            return self.getTypedRuleContext(mainParser.NationalNumberContext,0)


        def email(self):
            return self.getTypedRuleContext(mainParser.EmailContext,0)


        def postalCode(self):
            return self.getTypedRuleContext(mainParser.PostalCodeContext,0)


        def decimalNumber(self):
            return self.getTypedRuleContext(mainParser.DecimalNumberContext,0)


        def softwareVersion(self):
            return self.getTypedRuleContext(mainParser.SoftwareVersionContext,0)


        def websiteAddress(self):
            return self.getTypedRuleContext(mainParser.WebsiteAddressContext,0)


        def EOF(self):
            return self.getToken(mainParser.EOF, 0)

        def getRuleIndex(self):
            return mainParser.RULE_start

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStart" ):
                listener.enterStart(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStart" ):
                listener.exitStart(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStart" ):
                return visitor.visitStart(self)
            else:
                return visitor.visitChildren(self)




    def start(self):

        localctx = mainParser.StartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_start)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 14
            self.nationalNumber()
            self.state = 15
            self.email()
            self.state = 16
            self.postalCode()
            self.state = 17
            self.decimalNumber()
            self.state = 18
            self.softwareVersion()
            self.state = 19
            self.websiteAddress()
            self.state = 20
            self.match(mainParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NationalNumberContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NATIONAL_NUMBER(self):
            return self.getToken(mainParser.NATIONAL_NUMBER, 0)

        def getRuleIndex(self):
            return mainParser.RULE_nationalNumber

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNationalNumber" ):
                listener.enterNationalNumber(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNationalNumber" ):
                listener.exitNationalNumber(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNationalNumber" ):
                return visitor.visitNationalNumber(self)
            else:
                return visitor.visitChildren(self)




    def nationalNumber(self):

        localctx = mainParser.NationalNumberContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_nationalNumber)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 22
            self.match(mainParser.NATIONAL_NUMBER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EmailContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EMAIL(self):
            return self.getToken(mainParser.EMAIL, 0)

        def getRuleIndex(self):
            return mainParser.RULE_email

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEmail" ):
                listener.enterEmail(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEmail" ):
                listener.exitEmail(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEmail" ):
                return visitor.visitEmail(self)
            else:
                return visitor.visitChildren(self)




    def email(self):

        localctx = mainParser.EmailContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_email)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 24
            self.match(mainParser.EMAIL)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PostalCodeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def POSTAL_CODE(self):
            return self.getToken(mainParser.POSTAL_CODE, 0)

        def getRuleIndex(self):
            return mainParser.RULE_postalCode

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPostalCode" ):
                listener.enterPostalCode(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPostalCode" ):
                listener.exitPostalCode(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPostalCode" ):
                return visitor.visitPostalCode(self)
            else:
                return visitor.visitChildren(self)




    def postalCode(self):

        localctx = mainParser.PostalCodeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_postalCode)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 26
            self.match(mainParser.POSTAL_CODE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DecimalNumberContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DECIMAL_NUMBER(self):
            return self.getToken(mainParser.DECIMAL_NUMBER, 0)

        def getRuleIndex(self):
            return mainParser.RULE_decimalNumber

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDecimalNumber" ):
                listener.enterDecimalNumber(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDecimalNumber" ):
                listener.exitDecimalNumber(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDecimalNumber" ):
                return visitor.visitDecimalNumber(self)
            else:
                return visitor.visitChildren(self)




    def decimalNumber(self):

        localctx = mainParser.DecimalNumberContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_decimalNumber)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 28
            self.match(mainParser.DECIMAL_NUMBER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SoftwareVersionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SOFTWARE_VERSION(self):
            return self.getToken(mainParser.SOFTWARE_VERSION, 0)

        def getRuleIndex(self):
            return mainParser.RULE_softwareVersion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSoftwareVersion" ):
                listener.enterSoftwareVersion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSoftwareVersion" ):
                listener.exitSoftwareVersion(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSoftwareVersion" ):
                return visitor.visitSoftwareVersion(self)
            else:
                return visitor.visitChildren(self)




    def softwareVersion(self):

        localctx = mainParser.SoftwareVersionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_softwareVersion)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 30
            self.match(mainParser.SOFTWARE_VERSION)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WebsiteAddressContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WEBSITE_ADDRESS(self):
            return self.getToken(mainParser.WEBSITE_ADDRESS, 0)

        def getRuleIndex(self):
            return mainParser.RULE_websiteAddress

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWebsiteAddress" ):
                listener.enterWebsiteAddress(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWebsiteAddress" ):
                listener.exitWebsiteAddress(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWebsiteAddress" ):
                return visitor.visitWebsiteAddress(self)
            else:
                return visitor.visitChildren(self)




    def websiteAddress(self):

        localctx = mainParser.WebsiteAddressContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_websiteAddress)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 32
            self.match(mainParser.WEBSITE_ADDRESS)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





